Improved the regex section for improved efficiency.

--- a/explore/index.html
+++ b/explore/index.html
@@ -217,7 +217,6 @@
                     var propVal, prefix;
                     var matchIndex = 0;
                     var arrEmail = [];
-                    var arrWeb = [];
 
                     for (var key in props) {
                         // ensure that the key is a valid property of the GeoJson object and isn't one of the styling options
@@ -228,36 +227,30 @@
                             else {
                                 if (isNaN(props[key])) {
                                     /*
-                                        To enhance usability turn any email or web addresses found within the property value into hyperlinks.
+                                        To enhance usability turn email or web addresses found within the property value into hyperlinks.
 
                                         NOTE:
-                                            - This is done here each time the user selects a feature, rather than on the whole dataset when it is loaded for efficiency. It is likely only a few features will be selected by the user.
+                                            - For efficiency this is done here each time the user selects a feature, rather than on the whole dataset when it is loaded. It is likely only a few features will be selected by the user.
                                             - Not claiming to match every occurrence, but a high proportion.  There will always be ones that slip through, but this is an enhancement feature rather than a validation so isn't an issue.
-                                            - The method of pushing the matches to an array, substituting an indexed string then replacing with the HTML link is done to prevent the second regex matching the domain parts of email addresses or parts of the href property etc.
+                                            - The method of pushing the matching email addresses to an array, substituting an indexed string then replacing with the HTML link is done to prevent the second regex matching the domain parts of email addresses or parts of the href property etc.
+                                            - Regex obtained from: https://emailregex.com and http://urlregex.com
                                     */
 
                                     // Find email addresses
                                     propsVal = props[key].replace(/[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*/gi, function (x) {
                                         arrEmail.push('<a href="mailto:' + x + '">' + x + '</a>');
-                                        return '@@@EMAIL' + matchIndex++ + '@@@';
+                                        return '@@@EMAIL' + matchIndex++ + '@@@';   // replace with a temporary placeholder to prevent the web address regex matching part of the email addresses as well
                                     });
-
-                                    matchIndex = 0; // reset the index variable ready to match the web addresses
 
                                     // Find URLs - NOTE: we need to replace the value of propsVal NOT props[key] as we might have properties with a mix of email and web addresses
                                     propsVal = propsVal.replace(/\b(<a href=")?(http:\/\/www\.|https:\/\/www\.|http:\/\/|https:\/\/)?[a-z0-9]+([\-\.]{1}[a-z0-9]+)*\.[a-z]{2,5}(:[0-9]{1,5})?(\/.*)?\b/gi, function (x) {
                                         var prefix = (x.indexOf('http://') > -1 || x.indexOf('https://') > -1) ? '' : 'http://';     // if the URL doesn't contain the protocol we'll assume http://
-                                        arrWeb.push('<a href="' + prefix + x + '" target="_blank">' + x + '</a>');
-                                        return '@@@WEB' + matchIndex++ + '@@@';
+                                        return '<a href="' + prefix + x + '" target="_blank">' + x + '</a>';
                                     });
 
-                                    // Finally replace all email and web addresses found
+                                    // Finally replace all email addresses found
                                     for (var i = 0; i < arrEmail.length; i++) {
                                         propsVal = propsVal.replace('@@@EMAIL' + i + '@@@', arrEmail[i]);
-                                    }
-
-                                    for (var i = 0; i < arrWeb.length; i++) {
-                                        propsVal = propsVal.replace('@@@WEB' + i + '@@@', arrWeb[i]);
                                     }
                                 }
                                 else {
