Added maxZoom attribute to the map - fixes exceptions being thrown when displaying vector tiles.

--- a/explore/index.html
+++ b/explore/index.html
@@ -458,6 +458,7 @@
                     center: [53.4189, -2.33],
                     zoom: 12,
                     minZoom: 10,
+                    maxZoom: 18,
                     zoomDelta: 0.25,
                     zoomSnap: 0,
                     maxBounds: [[ 49.84 , -8.74 ], [ 60.9, 1.96 ]] // fix map view to the extent of Great Britain
