--- a/explore/index.html
+++ b/explore/index.html
@@ -440,12 +440,7 @@
             var labMap = new LabLeafletMap({
                 title: 'Explore',
                 about: 'Discover the different geographies within Trafford by choosing a layer and then selecting an area.',
-                baseLayers: {   // Override the default baselayers in LabMap so that we can specify OS Zoomstack vector tile layers
-                    'Light': labCreateVectorTileLayer('OSZoomstack.Light'),
-                    'Outdoor': labCreateVectorTileLayer('OSZoomstack.Outdoor'),
-                    'Road': labCreateVectorTileLayer('OSZoomstack.Road'),
-                    'White': labCreateTileLayer(null)
-                },
+                baseLayers: {}, // Pass an empty object to override the defaults - we will specify the baselayers once the map object has been initialised
                 attributes: {   // Override the default attributes in LabMap so that we can specify the maxBounds - the OS Zoomstack vector layers only cover Great Britain
                     center: [53.4189, -2.33],
                     zoom: 12,
@@ -457,7 +452,28 @@
                 }
             });
 
-            labMap.baseLayers.Light.addTo(labMap.map);   // Choose the initial base/tile layer for the map
+            // Specify the base layers object, so that we can specify OS Zoomstack vector tile layers.
+            try {
+                // Attempt to use OS Zoomstack vector tile layers
+                labMap.baseLayers = {
+                    'Light': labCreateVectorTileLayer('OSZoomstack.Light'),
+                    'Outdoor': labCreateVectorTileLayer('OSZoomstack.Outdoor'),
+                    'Road': labCreateVectorTileLayer('OSZoomstack.Road'),
+                    'White': labCreateTileLayer(null)
+                }
+            }
+            catch(e) {
+                // Likely an error occurred initialising WebGL, therefore use raster tile layers instead.
+                labMap.baseLayers = {
+                    'Light': labCreateTileLayer('CartoDB.Positron'),
+                    'Outdoor': labCreateTileLayer('OpenStreetMap.Hot'),
+                    'Road': labCreateTileLayer('OpenStreetMap.Mapnik'),
+                    'White': labCreateTileLayer(null)
+                }
+            }
+
+            labMap.updateLayerControl();                // update the layer control with the base layers
+            labMap.baseLayers.Light.addTo(labMap.map);  // choose the initial base/tile layer for the map
 
             // Add the isochrones plugin
             labMap.reachabilityControl = labSetupReachabilityPlugin({
